remove data before last three days

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -82,4 +81,9 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+
+    //worker
+    // Kotlin + coroutines
+    implementation("androidx.work:work-runtime-ktx:2.8.1")
 }
